[gd_scene load_steps=12 format=3 uid="uid://dgos7modwwbha"]

[ext_resource type="Script" uid="uid://bl0wgvg0g7cle" path="res://Scripts/woodcutting_mini.gd" id="1_scdf3"]
[ext_resource type="Texture2D" uid="uid://td0g2h2ifw4q" path="res://sprites/ChatGPT Image Oct 20, 2025, 01_22_31 AM (1).png" id="2_h1anq"]
[ext_resource type="Script" uid="uid://dnh02iqpdqn4e" path="res://Scripts/axe.gd" id="2_scdf3"]
[ext_resource type="Texture2D" uid="uid://deb1hfsuhkilf" path="res://sprites/axe-removebg-preview.png" id="3_scdf3"]
[ext_resource type="Texture2D" uid="uid://c1414o4vwrex" path="res://sprites/stump.png" id="5_w7rs2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h1anq"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_h1anq"]
friction = 0.0
bounce = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_axehead"]
radius = 34.0588

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_scdf3"]
absorbent = true

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_w7rs2"]
bounce = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ktdxi"]
size = Vector2(103.5, 103)

[node name="WoodcuttingMini" type="Node2D"]
script = ExtResource("1_scdf3")
game_duration = 0.0

[node name="Background" type="TextureRect" parent="."]
custom_minimum_size = Vector2(540, 1200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 540.0
offset_bottom = 1200.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_h1anq")
flip_h = true
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(270, 600)
metadata/_edit_group_ = true

[node name="LogContainer" type="Node2D" parent="."]

[node name="Baskets" type="Node2D" parent="."]

[node name="LeftBasket" type="ColorRect" parent="Baskets"]
offset_left = 35.0
offset_top = 980.0
offset_right = 135.0
offset_bottom = 1040.0
color = Color(0.8, 0.2, 0.2, 1)

[node name="LeftLabel" type="Label" parent="Baskets/LeftBasket"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "BAD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightBasket" type="ColorRect" parent="Baskets"]
offset_left = 405.0
offset_top = 980.0
offset_right = 505.0
offset_bottom = 1040.0
color = Color(0.2, 0.8, 0.2, 1)

[node name="RightLabel" type="Label" parent="Baskets/RightBasket"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -11.5
offset_right = 25.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "GOOD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LogSpawnTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="TimerLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 43.0
theme_override_font_sizes/font_size = 20
text = "Time: 30.0"

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 293.0
offset_top = 20.0
offset_right = 454.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 16
text = "Score: 0
Correct: 0 | Wrong: 0"

[node name="FeedbackLabel" type="Label" parent="UI"]
visible = false
offset_left = 140.0
offset_top = 300.0
offset_right = 340.0
offset_bottom = 340.0
theme_override_font_sizes/font_size = 32
text = "Good! +10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="stump?" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.647059, 0.52549, 0.262745, 1)
position = Vector2(236.25, 484)
scale = Vector2(1.49583, 1.35507)
texture = ExtResource("5_w7rs2")

[node name="Axe" type="Node2D" parent="."]
position = Vector2(270, 895)
script = ExtResource("2_scdf3")

[node name="Handlepoint" type="RigidBody2D" parent="Axe"]
position = Vector2(1, 0)
scale = Vector2(1.5, 1.5)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Area2D" type="CollisionShape2D" parent="Axe/Handlepoint"]
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_h1anq")
metadata/_edit_lock_ = true

[node name="AxeHead" type="RigidBody2D" parent="Axe"]
position = Vector2(11, 250)
scale = Vector2(1.5, 1.5)
collision_layer = 2
collision_mask = 136
physics_material_override = SubResource("PhysicsMaterial_h1anq")
gravity_scale = 0.0
freeze = true
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Axe/AxeHead"]
position = Vector2(-4.66666, -58.6667)
rotation = -2.35619
scale = Vector2(0.45, 0.45)
texture = ExtResource("3_scdf3")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Axe/AxeHead"]
position = Vector2(-2, -0.666667)
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_axehead")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="axepivotpoint" type="PinJoint2D" parent="Axe"]
position = Vector2(1, 1)
scale = Vector2(1.5, 1.5)
node_a = NodePath("../Handlepoint")
node_b = NodePath("../AxeHead")
metadata/_edit_lock_ = true

[node name="RigidBody2D" type="RigidBody2D" parent="."]
disable_mode = 2
collision_layer = 16
collision_mask = 287
physics_material_override = SubResource("PhysicsMaterial_scdf3")
gravity_scale = 0.0
can_sleep = false
lock_rotation = true
freeze = true
freeze_mode = 1
linear_damp_mode = 1
linear_damp = 100.0
angular_damp_mode = 1
angular_damp = 100.0
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="RigidBody2D"]
position = Vector2(130, 800)
scale = Vector2(1.5, 1.5)
build_mode = 1
polygon = PackedVector2Array(29, -1000, 150, -1000, 150, 0, 29, 0)
metadata/_edit_lock_ = true

[node name="RigidBody2D2" type="RigidBody2D" parent="."]
collision_layer = 128
collision_mask = 2
mass = 500.0
physics_material_override = SubResource("PhysicsMaterial_w7rs2")
gravity_scale = 0.0
lock_rotation = true
freeze = true
freeze_mode = 1
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D2"]
position = Vector2(270, 800)
shape = SubResource("RectangleShape2D_ktdxi")
metadata/_edit_lock_ = true
